--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,18 +6,16 @@
   <title>htmx-intro!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
+  <link rel="stylesheet" href="/public/css/styles.css">
   <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <input type="text" name="q"
-    hx-get="/search"
-    hx-trigger="keyup changed delay:500ms"
-    hx-target="#search-results"
-    placeholder="Search..."
-  />
-  <div id="search-results">
-    Search Results Here
+  <div hx-target="this" hx-swap="innerHTML">
+    <h3>Start Progress</h3>
+    <button hx-post="/start" class="btn">
+      Start Job
+    </button>
   </div>
 </body>
 
